<resources>
    <string name="app_name">Multi Sub Meter ver.1</string>
    <string name="main_func_tab_name_1">グラフデータ表示</string>
    <string name="main_func_tab_name_2">アプリ設定</string>
    <string name="main_func_tab_name_3">車両情報</string>
    <string name="main_func_tab_name_4">接続支援</string>
    <string name="main_func_tab_name_5">SKYACTIV-D 1.5</string>
    <string name="setting_appbar_name">設定</string>
    <string name="carInfo_select_appbar_name">車両情報 - 選択</string>
    <string name="carInfo_add_appbar_name">車両情報 - 登録</string>
    <string name="carInfo_detail_appbar_name">車両情報 - 詳細</string>
    <string name="graphData_appbar_name">グラフデータ</string>
    <string name="graphData_setting_appbar_name">グラフデータ - 設定</string>
    <string name="graphData_add_appbar_name">グラフデータ - 追加</string>
    <string name="app_namea">Kotlin-OBD2-API ver.1</string>
    <string name="app_names">Kotlin-OBD2-API ver.1</string>
    <string name="app_named">Kotlin-OBD2-API ver.1</string>
    <string name="app_namef">Kotlin-OBD2-API ver.1</string>
    <string name="app_nameg">Kotlin-OBD2-API ver.1</string>
    <string name="app_nameh">Kotlin-OBD2-API ver.1</string>

    <string name="d_eg_egr_bar_title">EGR HOT/COOL バルブ開度</string>
    <string name="d_tm_rc_bar_title">トルク前後配分</string>
    <string name="d_tm_gear_bar_title">GEAR / LOCKUP</string>
    <string name="d_dpf_distance_bar_title">DPF再生後距離</string>
    <string name="d_dpf_pm_bar_title">PM堆積量</string>
    <string name="d_dpf_temp_bar_title">DPF温度</string>
    <string name="d_tm_fluid_temp_bar_title">T/M Fluid</string>
    <string name="d_eg_oil_temp_bar_title">E/G Oil</string>
    <string name="d_eg_coolant_temp_bar_title">E/G Coolant</string>
    <string name="d_torque_bar_title">Torque(Nm)</string>
    <string name="d_boost_bar_title">Boost(bar)</string>

    <string name="mb_main">注意</string>
    <string name="mb_sub">運転中にアプリの操作をするのはおやめください</string>

    <!-- MainActivity トースト用 -->
    <string name="bluetooth_is_not_supported">Bluetooth is not supported.</string>
    <string name="bluetooth_is_not_working">Bluetooth is not working.</string>

    <string name="device_name">device_name</string>
    <string name="device_address">device_address</string>

</resources>