<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SkyactivForDieselActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"

            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"></androidx.appcompat.widget.Toolbar>

            <Button
                android:id="@+id/button3"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="戻る" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"


        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/GDSD_IDM_BAR"
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <LinearLayout
                    android:id="@+id/GDSD_IDM_BAR_GRAPH"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/GDSD_IDM_BAR_GRAPH_1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:srcCompat="@android:drawable/alert_light_frame" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/GDSD_IDM_BAR_GRAPH_2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:srcCompat="@android:drawable/alert_light_frame" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/GDSD_IDM_BAR_GRAPH_3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:srcCompat="@android:drawable/alert_light_frame" />

                    <Space
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

            </FrameLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/GDSD_EGR_POSITION_BAR"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/GDSD_EGR_POSITION_BAR_TITLE"
                        android:layout_width="match_parent"
                        android:layout_height="32dp"
                        android:background="@color/black"
                        android:text="@string/d_eg_egr_bar_title"
                        android:textSize="20sp" />

                    <ProgressBar
                        android:id="@+id/GDSD_EGR_HOT_POSITION_BAR_GRAPH"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="@color/black" />

                    <ProgressBar
                        android:id="@+id/GDSD_EGR_COOL_POSITION_BAR_GRAPH"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="match_parent"
                        android:layout_height="56dp"
                        android:background="@color/black" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/GDSD_BT_GRAPH_BAR"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/GDSD_BOOST_BAR"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/GDSD_BOOST_BAR_GRAPH"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/GDSD_BOOST_BAR_GRAPH_TITLE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/d_boost_bar_title"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/GDSD_TORQUE_BAR"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/GDSD_TORQUE_BAR_GRAPH"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/GDSD_TORQUE_BAR_TITLE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/d_torque_bar_title"
                        android:textSize="20sp"
                        app:autoSizeTextType="none" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/GDSD_TEMP_BAR"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/GDSD_COOLANT_TEMP_BAR"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/GDSD_COOLANT_TEMP_BAR_GRAPH"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textSize="48sp" />

                    <TextView
                        android:id="@+id/GDSD_COOLANT_TEMP_BAR_TITLE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/d_eg_coolant_temp_bar_title"
                        android:textSize="20sp"
                        app:autoSizeTextType="none" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/GDSD_EG_OIL_TEMP_BAR"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/GDSD_EG_OIL_TEMP_BAR_GRAPH"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textSize="48sp" />

                    <TextView
                        android:id="@+id/GDSD_EG_OIL_TEMP_BAR_TITLE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/d_eg_oil_temp_bar_title"
                        android:textSize="20sp"
                        app:autoSizeTextType="none" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/GDSD_TM_FLUID_TEMP_BAR"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/GDSD_TM_FLUID_TEMP_BAR_GRAPH"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textSize="48sp" />

                    <TextView
                        android:id="@+id/GDSD_TM_FLUID_TEMP_BAR_TITLE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/d_tm_fluid_temp_bar_title"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/GDSD_DPF_BAR"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/GDSD_DPF_TEMP_BAR"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ProgressBar
                        android:id="@+id/GDSD_DPF_TEMP_BAR_GRAPH"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="match_parent"
                        android:layout_height="160dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/GDSD_DPF_TEMP_BAR_TITLE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/d_dpf_temp_bar_title"
                        android:textSize="20sp"
                        app:autoSizeTextType="none" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/GDSD_DPF_DP_BAR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/GDSD_DPF_PM_BAR_GRAPH"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textSize="48sp" />

                    <TextView
                        android:id="@+id/GDSD_DPF_PM_BAR_TITLE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/d_dpf_pm_bar_title"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/GDSD_DPF_DISTANCE_BAR_GRAPH"
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textSize="48sp" />

                    <TextView
                        android:id="@+id/GDSD_DPF_DISTANCE_BAR_TITLE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/d_dpf_distance_bar_title"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/GDSD_TM_BAR"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/GDSD_TM_GEAR_BAR"
                    android:layout_width="160dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/GDSD_TM_GEAR_BAR_GRAPH"
                        android:layout_width="match_parent"
                        android:layout_height="112dp"
                        android:layout_weight="1"
                        android:text="OFF"
                        android:textSize="48sp"
                        app:autoSizeTextType="none" />

                    <TextView
                        android:id="@+id/GDSD_TM_GEAR_BAR_TITLE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/d_tm_gear_bar_title"
                        android:textSize="20sp"
                        app:autoSizeTextType="none" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/GDSD_TM_RC_BAR"
                    android:layout_width="240dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/GDSD_TM_RC_BAR_GRAPH"
                        android:layout_width="match_parent"
                        android:layout_height="112dp"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textSize="48sp" />

                    <TextView
                        android:id="@+id/GDSD_TM_RC_BAR_TITLE"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/d_tm_rc_bar_title"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>